--- a/index.html
+++ b/index.html
@@ -1,13 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Myeonghun Lee's CV</title>
     <style>
-        /* Add your CSS styles here */
+        body {
+            font-family: 'EB Garamond', serif;
+            margin: 20px;
+        }
+
+        h1, h2 {
+            color: #1E90FF;
+        }
+
+        h2 {
+            margin-top: 10px;
+        }
+
+        p {
+            margin-bottom: 10px;
+        }
+
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+
+        li {
+            margin-bottom: 5px;
+        }
+
+        a {
+            color: #4CAF50;
+        }
     </style>
 </head>
 <body>
     <h1>Myeonghun Lee</h1>
-    <!-- Add more content here following the structure of your CV -->
+    
+    <p>College of Business, KAIST</p>
+    <p>Hoegi-ro 85 Dongdaemun-gu, Seoul, Korea 02455</p>
+    <p>Phone: +82-10-9089-8601</p>
+    <p>Email: <a href="mailto:mhlee96@kaist.ac.kr">mhlee96@kaist.ac.kr</a></p>
+
+    <h2>Summary</h2>
+    <p>I am a Ph.D. Candidate in Management Engineering at KAIST, specializing in Operations Management. My research focuses on Online Platforms, Assortment Planning, Revenue Management, and Sustainable Management.</p>
+
+    <h2>Education</h2>
+    <ul>
+        <li><strong>Korea Advanced Institute of Science and Technology (KAIST)</strong></li>
+        <ul>
+            <li>Ph.D. Candidate, Management Engineering (M.S./Ph.D. integrated), 2019 - present</li>
+            <li>M.S., Management Engineering, 2018 - 2019</li>
+        </ul>
+        <li><strong>Pohang University of Science and Technology (POSTECH)</strong></li>
+        <ul>
+            <li>B.S., Industrial Management Engineering, 2014 - 2018</li>
+        </ul>
+    </ul>
+
+    <!-- Add more sections following the same structure -->
+
 </body>
 </html>
