--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <div id="ResearchContent" class="content">
         <h1>Myeonghun Lee</h1>
         <!-- Add your photo here -->
-        <img src="file:///C:/Users/Myeonghun%20Lee/Downloads/mh_photo.jpg" alt="My Photo" style="width: 150px; height: 150px; border-radius: 50%;">
+        <img src="images/mh_photo.jpg" alt="My Photo" style="width: 150px; height: 150px; border-radius: 50%;">
 
         <!-- Research Section -->
         <h2>Research Interests</h2>
